--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>EXTENSION TUTORIALS</h1>
-    <p>Learn how to build a chrome extension</p>
+    <h1>OutPicker2</h1>
+    <p>this is test</p>
     <script src="popup.js"></script>
   </body>
 </html>
